--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.nav{
+  color: white;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +45,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+header{
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 10%;
+  font-family: Monserrat, sans-serif;
 }
